--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,4 +36,4 @@ jobs:
       # run tests!
       - run: npm run build
       - run: npm run test
-      - run: npm run deploy
+      - run: firebase deploy --token process.env.FIREBASE_DEPLOY_TOKEN
