--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_DATABASE_URL=
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
 FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_DEPLOY_TOKEN=
