--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,11 +35,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run:
-          command: |
-            npm run test
-            bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
-
+      - run: npm run test
 
       - run: npm run build
 
@@ -49,3 +45,8 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
             fi
+
+      - run:
+          name: Upload code coverage
+          command:  bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+          when: on_success
