--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
 FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_DEPLOY_TOKEN=
+
+REACT_APP_PLAID_CLIENT_ID=
+REACT_APP_PLAID_PUBLIC_KEY=
+REACT_APP_PLAID_SECRET=
