--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.2"
+    "firebase-functions": "^0.6.2",
+    "plaid": "^2.0.5"
   },
   "private": true
 }
