--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^4.0.0",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.2",
+    "moment": "^2.18.1",
     "plaid": "^2.0.5"
   },
   "private": true
