--- a/functions/.env.example
+++ b/functions/.env.example
@@ -9,3 +9,13 @@ FIREBASE_DEPLOY_TOKEN=
 REACT_APP_PLAID_CLIENT_ID=
 REACT_APP_PLAID_PUBLIC_KEY=
 REACT_APP_PLAID_SECRET=
+
+REACT_APP_FIREBASE_TYPE=
+REACT_APP_FIREBASE_PRIVATE_KEY_ID=
+REACT_APP_FIREBASE_PRIVATE_KEY=""
+REACT_APP_FIREBASE_CLIENT_EMAIL=
+REACT_APP_FIREBASE_CLIENT_ID=
+REACT_APP_FIREBASE_AUTH_URI=
+REACT_APP_FIREBASE_TOKEN_URI=
+REACT_APP_FIREBASE_AUTH_PROVIDER_X509_CERT_URL=
+REACT_APP_FIREBASE_CLIENT_X509_CERT_URL=
