--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "bluebird": "^3.5.0",
     "dotenv": "^4.0.0",
     "firebase": "^4.3.0",
     "firebase-admin": "^5.2.1",
     "firebase-functions": "^0.6.3",
     "firebaseui": "^2.3.0",
+    "node-google-calendar": "^1.1.0",
     "qs": "^6.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
