Hide credentials in .env

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,17 @@ REACT_APP_FIREBASE_AUTH_URI=
 REACT_APP_FIREBASE_TOKEN_URI=
 REACT_APP_FIREBASE_AUTH_PROVIDER_X509_CERT_URL=
 REACT_APP_FIREBASE_CLIENT_X509_CERT_URL=
+
+GCAL_CLIENT_ID=
+GCAL_CLIENT_SECRET=
+GCAL_PROJECT_ID=
+GCAL_AUTH_URI=
+GCAL_TOKEN_URI=
+GCAL_AUTH_PROVIDER=
+GCAL_URN=
+GCAL_LOCALHOST=
+
+OAUTH2_ACCESS_TOKEN=
+OAUTH2_REFRESH_TOKEN=
+OAUTH2_TOKEN_TYPE=
+OAUTH2_EXPIRY_DATE=
