Move functions into functions folder

--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,7 @@
     "plaid": "^2.0.5"
   },
   "scripts": {
-    "server-start": "firebase serve --only functions"
+    "start": "firebase serve --only functions"
   },
   "private": true
 }
