--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dotenv": "^4.0.0",
     "firebase": "^4.3.0",
     "firebase-admin": "^5.2.1",
-    "firebase-functions": "^0.6.3",
     "firebaseui": "^2.3.0",
     "node-google-calendar": "^1.1.0",
     "qs": "^6.5.0",
@@ -18,12 +17,11 @@
     "react-scripts": "1.0.12"
   },
   "scripts": {
-    "start": "react-scripts start & firebase serve --only functions",
+    "start": "react-scripts start",
     "deploy": "firebase deploy",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --coverage",
-    "eject": "react-scripts eject",
-    "server-start": "firebase serve --only functions"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "firebase-tools": "^3.10.0"
