--- a/functions/package.json
+++ b/functions/package.json
@@ -16,5 +16,8 @@
   "scripts": {
     "start": "firebase serve --only functions"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "firebase-tools": "^3.11.0"
+  }
 }
