--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,5 +37,5 @@ jobs:
           name: Deploy to Firebase
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+              ./functions/node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
             fi
