--- a/functions/package.json
+++ b/functions/package.json
@@ -16,5 +16,13 @@
   "scripts": {
     "start": "firebase serve --port 5000 --only functions"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-eslint": "^8.0.0",
+    "eslint": "^4.7.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0"
+  }
 }
