--- a/functions/.env.example
+++ b/functions/.env.example
@@ -10,6 +10,10 @@ REACT_APP_PLAID_CLIENT_ID=
 REACT_APP_PLAID_PUBLIC_KEY=
 REACT_APP_PLAID_SECRET=
 
+HOST=
+LOCALHOST=
+PRODUCTIONHOST=
+
 REACT_APP_FIREBASE_TYPE=
 REACT_APP_FIREBASE_PRIVATE_KEY_ID=
 REACT_APP_FIREBASE_PRIVATE_KEY=""
