--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,10 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source": "/deleteUserProfile",
+        "function": "deleteUserProfile"
       }
     ]
   }
