Revert .env.example change

--- a/functions/.env.example
+++ b/functions/.env.example
@@ -10,11 +10,9 @@ REACT_APP_PLAID_CLIENT_ID=
 REACT_APP_PLAID_PUBLIC_KEY=
 REACT_APP_PLAID_SECRET=
 
-REACT_APP_HOST=
-REACT_APP_LOCALHOST=
-REACT_APP_PRODUCTIONHOST=
-
-REACT_APP_WEBHOOK=
+HOST=
+LOCALHOST=
+PRODUCTIONHOST=
 
 REACT_APP_FIREBASE_TYPE=
 REACT_APP_FIREBASE_PRIVATE_KEY_ID=
