--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
     "axios": "^0.16.2",
     "bluebird": "^3.5.0",
     "cors": "^2.8.4",
-    "dotenv": "^4.0.0",
+    "envkey": "^1.0.0",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.2",
     "google-auth-library": "^0.11.0",
