--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ node_js:
 before_script: 
   - cd functions
   - npm install
-  - ./functions/node_modules/.bin/firebase deploy --only functions
+  - ./node_modules/.bin/firebase deploy --only functions
