--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ node_js:
 before_script: 
   - cd functions
   - npm install
-  - ./node_modules/.bin/firebase deploy --only functions
+
+after_success:
+- ./node_modules/.bin/firebase deploy --only functions
