--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_script:
   - npm install
 
 after_success:
-- ./node_modules/.bin/firebase deploy --only functions
+- ./functions/node_modules/.bin/firebase deploy --only functions
