--- a/functions/package.json
+++ b/functions/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
+    "firebase-tools": "^3.12.0",
     "jest": "^21.2.0"
   }
 }
