--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ FIREBASE_DEPLOY_TOKEN=
 REACT_APP_PLAID_CLIENT_ID=
 REACT_APP_PLAID_PUBLIC_KEY=
 REACT_APP_PLAID_SECRET=
+REACT_APP_PLAID_ENV=
 
 REACT_APP_HOST=
 REACT_APP_LOCALHOST=
