--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "deploy": "npm run build && firebase deploy",
+    "deploy-dev": "npm run build && firebase deploy -P dev",
+    "deploy-production": "npm run build && firebase deploy -P production",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --coverage",
     "eject": "react-scripts eject"
