--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ cache:
   directories:
   - functions/node_modules
 after_success:
-- ./node_modules/.bin/firebase deploy --only functions --token $FIREBASE_DEPLOY_TOKEN
+- npm run deploy-production
