--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,10 @@
   },
   "scripts": {
     "webhook": "ngrok http 5000",
-    "start": "firebase serve --port 5000 --only functions",
+    "start": "firebase serve --port 5000 --only functions --debug",
     "lint": "./node_modules/.bin/eslint index.js",
-    "deploy-production": "firebase deploy --only functions -P production",
-    "deploy-dev": "firebase deploy --only functions -P dev",
+    "deploy-production": "firebase deploy --only functions -P production --debug",
+    "deploy-dev": "firebase deploy --only functions -P dev --debug",
     "test": "jest"
   },
   "private": true,
