Add debug to CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-- 6.11.1
+- 6.11.5
 before_script:
 - cd functions
 - npm install -g firebase-tools
@@ -10,4 +10,4 @@ cache:
   - functions/node_modules
 after_success:
 - pwd
-- firebase deploy --only functions -P production --token $FIREBASE_DEPLOY_TOKEN
+- firebase deploy --only functions -P production --token $FIREBASE_DEPLOY_TOKEN --debug
