--- a/functions/package.json
+++ b/functions/package.json
@@ -6,12 +6,12 @@
     "bluebird": "^3.5.1",
     "cors": "^2.8.4",
     "envkey": "^1.0.0",
-    "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.3",
+    "firebase-admin": "^5.2.1",
+    "firebase-functions": "^0.7.3",
     "google-auth-library": "^0.11.0",
     "googleapis": "^21.3.0",
     "moment": "^2.19.1",
-    "plaid": "^2.1.0"
+    "plaid": "^2.1.1"
   },
   "scripts": {
     "webhook": "ngrok http 5000",
@@ -28,7 +28,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "^7.5.1",
     "jest": "^21.2.0"
   }
 }
