--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,11 @@
     "plaid": "^2.1.0"
   },
   "scripts": {
-    "start": "firebase serve --port 5000 --only functions",
+    "webhook": "ngrok http 5000",
+    "start": "firebase serve --port 5000 --only functions --debug",
     "lint": "./node_modules/.bin/eslint index.js",
-    "deploy-production": "firebase deploy --only functions -P production",
-    "deploy-dev": "firebase deploy --only functions -P dev",
+    "deploy-production": "firebase deploy --only functions -P production --debug",
+    "deploy-dev": "firebase deploy --only functions -P dev --debug",
     "test": "jest"
   },
   "private": true,
