--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
 - npm install
 cache:
   directories:
-  - /node_modules
+  - node_modules
 after_success:
 - npm run build
 - ./node_modules/.bin/firebase deploy -P dev --token $FIREBASE_DEPLOY_TOKEN
