--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: node_js
 node_js:
 - 6.11.5
-before_install:		
- - chmod +x deploy.sh
 install:
 - npm install
 cache:
   directories:
   - node_modules
 after_success:
-- ./deploy.sh
+- bash deploy.sh
 notifications:
   email: false
