--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "firebase-functions": "^0.6.3",
     "google-auth-library": "^0.11.0",
     "googleapis": "^21.3.0",
-    "moment": "^2.19.1",
+    "moment": "^2.19.3",
     "plaid": "^2.1.0"
   },
   "scripts": {
@@ -23,11 +23,12 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^8.0.0",
-    "eslint": "^4.10.0",
+    "eslint": "^4.12.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
+    "firebase-tools": "^3.15.4",
     "jest": "^21.2.0"
   }
 }
