revert CRA ejection

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,16 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      },
+      {
+        "source": "/deleteUserProfile",
+        "function": "deleteUserProfile"
+      }
     ]
   }
 }
