--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "1.0.16"
   },
   "scripts": {
+    "webhook": "ngrok http 5000",
+    "getEnv": "./envkey-fetch-osx > src/creds.json",
     "start": "react-scripts start",
     "deploy-dev": "npm run build && firebase deploy -P dev",
     "deploy-production": "npm run build && firebase deploy -P production",
