--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,8 @@
     "google-auth-library": "^0.11.0",
     "googleapis": "^21.3.0",
     "moment": "^2.19.3",
-    "plaid": "^2.1.0"
+    "plaid": "^2.1.0",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "getEnv": "./envkey-fetch-osx > creds.json",
