--- a/functions/package.json
+++ b/functions/package.json
@@ -1,21 +1,25 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "main": "lib/src/index.js",
   "dependencies": {
     "axios": "^0.16.2",
     "bluebird": "^3.5.1",
     "cors": "^2.8.4",
-    "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.7.3",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.2",
     "google-auth-library": "^0.11.0",
     "googleapis": "^21.3.0",
     "moment": "^2.19.3",
     "plaid": "^2.1.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.3",
     "underscore": "^1.8.3"
   },
   "scripts": {
     "getEnv": "./envkey-fetch-osx > creds.json",
-    "start": "firebase serve --port 5000 --only functions --debug",
+    "build": "./node_modules/.bin/tslint --project tsconfig.json && ./node_modules/.bin/tsc",
+    "start": "npm run build && firebase serve --port 5000 --only functions --debug",
     "lint": "./node_modules/.bin/eslint index.js",
     "deploy-production": "firebase deploy --only functions -P production --debug",
     "deploy-dev": "firebase deploy --only functions -P dev --debug",
@@ -23,6 +27,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@types/request": "^2.47.0",
     "babel-eslint": "^8.0.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^15.1.0",
